--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,32 @@
     --scroll-thumb-color: #70768a;
     --scroll-thumb-hover-color: #454f6b;
 
+}
 
+.dark-theme{
+  /*================= Main theme colors ==============*/
+  --first-color: #fff;
+  --second-color: #6a59d1;
+  --third-color: #a9afc3;
+
+
+
+/*================= Background colors ==============*/
+  --body-bg-color: #0e1b31;
+  --card-bg-color: #132347;
+  --modal-bg-color: #102048;
+  --bg-transparent-color: rgba(255,255,255,0.1);
+  --bg-transparent-color-01: rgba(255,255,255,0.1);
+  --linear-color: #454f6b;
+/*================= Color Filter ==============*/
+  --color-filter: invert(0);
+
+
+
+/*================= Scroll bar colors ==============*/
+  --scroll-bar-color: #c1ceff;
+  --scroll-thumb-color: #282f4e;
+  --scroll-thumb-hover-color: #454f6b;
 
 }
 
@@ -63,6 +88,56 @@ a{
 li{
     list-style: none;
 }
+
+/*================= Scroll to top button ==============*/
+.scrollToTop-btn{
+    z-index: 99999;
+    position: fixed;
+    right: 0;
+    bottom: 20px;
+    width: 45px;
+    height: 45px;
+    background-color: var(--second-color);
+    color: #fff;
+    font-size: var(--small-font-size);
+    border-radius: 3px;
+    cursor: pointer;
+    opacity: 0;
+    transition: .5s ease;
+}
+
+.scrollToTop-btn.active{
+    right: 20px;
+    pointer-events: all;
+    opacity: 1;
+}
+
+/*================= Light/Dark theme button ==============*/
+.theme-btn{
+    z-index: 999999;
+    position: fixed;
+    right: 0;
+    top: 100px;
+    background: var(--bg-transparent-color-01);
+    backdrop-filter: blur(20px);
+    width: 50px;
+    height: 50px;
+    font-size: 1.2em;
+    border-radius: 5px 0 0 5px;
+    box-shadow: var(--box-shadow);
+    cursor: pointer;
+}
+
+.theme-btn .fa-sun, .theme-btn.sun .fa-moon{
+    display: none;
+}
+
+.theme-btn.sun .fa-sun{
+    display: block;
+}
+
+/*================= Dark/Light theme button ==============*/
+
 
 /*================= Scroll bar ==============*/
 ::-webkit-scrollbar{
@@ -125,12 +200,20 @@ header.sticky .navbar{
     font-weight: 500;
 }
 
+.nav-items a.active{
+    color: var(--second-color);
+}
+
 .nav-items a:not(:last-child){
     margin-right: 50px;
 }
 
 .nav-items a:hover{
     color: var(--second-color);
+}
+
+.nav-menu-btn{
+    display: none;
 }
 
 /*================= Fin de Header ==============*/
@@ -534,4 +617,571 @@ header.sticky .navbar{
 
 .edu-list .item:hover, .bar:hover, .experience-card:hover{
     transform: scale(1.03);
+}
+
+/*===============Services section============*/
+.services .container .content{
+    width: 100%;
+}
+
+.services-description h3{
+    font-size: 2em;
+    margin-bottom: 50px;
+}
+
+.service-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(225px,1fr));
+    max-width: 100%;
+    margin: 0 auto;
+    gap: 20px
+}
+
+.service-card{
+    background: var(--card-bg-color);
+    border-bottom: 3px solid var(--second-color);
+    padding: 50px;
+    border-radius: 6px;
+    box-shadow: var(--box-shadow);
+}
+
+.service-card > i{
+    color: var(--second-color);
+    font-size: 3em;
+    margin-bottom: 30px;
+}
+
+.service-card h3{
+    font-size: 1.5em;
+    font-weight: 700;
+    line-height: 30px;
+    margin-bottom: 20px; 
+}
+
+.service-card .learn-more-btn{
+    color: var(--third-color);
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+.service-card .learn-more-btn i{
+    transition: .3s ease;
+}
+
+.service-card:hover .learn-more-btn i{
+    transform: translateX(10px);
+}
+
+.service-modal{
+    z-index: 999999;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: var(--bg-transparent-color);
+    backdrop-filter: blur(10px);
+    visibility: hidden;
+    opacity: 0;
+    transition: .3s ease;
+}
+
+.service-modal.active{
+    visibility: visible;
+    opacity: 1;
+}
+
+.service-modal-body{
+    position: relative;
+    background: var(--modal-bg-color);
+    max-width: 600px;
+    margin: 20px;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: var(--box-shadow);
+    transform: translateY(-50px);
+    transition: .5s ease;
+}
+
+.service-modal.active .service-modal-body{
+    transform: translateY(0);
+}
+
+.service-modal-body .modal-close-btn{
+    position: absolute;
+    top:  0;
+    right: 0;
+    margin: 20px;
+    cursor: pointer;
+}
+
+.service-modal-body h3{
+    font-size: 2em;
+}
+
+.service-modal-body h4{
+    font-size: 1.3em;
+    font-weight: 600;
+    margin: 15px 0 10px;
+}
+
+.service-modal-body ul li{
+    margin-top: 15px;
+}
+
+.service-modal-body ul li i{
+    color: var(--second-color);
+}
+
+/*=============Portfolio section==========*/
+.portfolio .container .content{
+    width: 100%;
+}
+
+.portfolio-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    max-width: 100%;
+    gap: 35px;
+    margin: 0 auto;
+}
+
+.portfolio-list .img-card{
+    position: relative;
+    max-width: 100%;
+    height: 360px;
+    border-radius: 10px;
+    box-shadow: var(--box-shadow);
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.portfolio-list .img-card .overlay{
+    transition: 1s ease;
+}
+
+.portfolio-list .img-card:hover .overlay{
+    z-index: 777;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0, 0.5);
+}
+
+.portfolio-list .img-card .info{
+    z-index: 777;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 20px;
+    color: #fff;
+    transform: translateY(20px);
+    opacity: 0;
+    transition: .5s ease;
+}
+
+.portfolio-list .img-card:hover .info{
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.portfolio-list .img-card .info h3{
+    font-size: 1.5em;
+}
+
+.portfolio-list .img-card .info span{
+    font-size: 1.2em;
+}
+
+.portfolio-list .img-card img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.portfolio-model{
+    z-index: 999999;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: var(--bg-transparent-color-01);
+    backdrop-filter: blur(20px);
+    visibility: hidden;
+    opacity: 0;
+    transition: .3s ease;
+}
+
+.portfolio-model.active{
+    visibility: visible;
+    opacity: 1;
+}
+
+.portfolio-model-body{
+    position: relative;
+    background: var(--modal-bg-color);
+    max-width: 600px;
+    margin: 20px;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: var(--box-shadow);
+    transform: translateY(-50px);
+    transition: .5s ease;
+}
+
+.portfolio-model.active .portfolio-model-body{
+    transform: translateY(0);
+}
+
+.portfolio-close-btn{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 20px;
+    cursor: pointer;
+}
+
+.portfolio-model-body h3{
+    font-size: 1.5em;
+}
+
+.portfolio-model-body img{
+    width: 100%;
+    margin: 20px 0;
+    border-radius: 10px;
+}
+
+
+/*=============Get-in-touch==========*/
+.get-in-touch{
+    margin-top: 70px;
+}
+
+.get-in-touch .container .content{
+    width: 100%;
+}
+
+.get-in-touch .contact-card{
+    position: relative;
+    width: 90%;
+    background: var(--card-bg-color);
+    box-shadow: var(--box-shadow);
+    padding: 50px;
+    border-radius: 10px;
+    column-gap: 50px;
+}
+
+.contact-card .title{
+    text-transform: uppercase;
+    line-height: 60px;
+}
+
+.contact-card .title h4{
+    font-size: 1.2em;
+    font-weight: 300;
+    line-height: 20px;
+}
+
+.contact-card .title h3{
+    font-size: 2.3em;
+    font-weight: 400;
+}
+
+.contact-card .title h2{
+    font-size: 4.2em;
+    font-weight: 700;
+    background: linear-gradient(to top, transparent 0%, var(--first-color) 30%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    opacity: .9;
+}
+
+
+/*=============Our Clients==========*/
+/* 
+.our-client .containter{
+    flex-direction: column;
+}
+
+.our-client .containter .content{
+    width: 100%;
+}
+
+.client-swiper .swiper-wrapper{
+    margin-bottom: 30px;
+}
+
+.client-swiper .swiper-slider{
+    gap: 50px;
+    margin: 20px 0;
+}
+
+.client-img{
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.client-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.client-details{
+    max-width: 500px;
+}
+
+.client-details p{
+    font-size: 1.2em;
+    color: var(--third-color);
+    padding-bottom: 15px;
+    margin-bottom: 10px;
+    border-bottom: 2px solid var(--linear-color);
+}
+
+.client-details h3{
+    color: var(--first-color);
+    font-size: 1.5em;
+}
+
+.client-details span{
+    color: var(--third-color);
+    font-size: 1.1em;
+} */
+
+/*=============Contact Me==========*/
+.contact .container .content{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.contact-left h2{
+    font-size: 2.1em;
+    font-weight: 800;
+    margin-bottom: 40px;
+}
+
+.contact-list li{
+    margin-bottom: 40px;
+}
+
+.contact-list li h3{
+    font-size: 1.3em;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.contact-list li h3 i{
+    color: var(--second-color);
+    font-size: 1.3em;
+    margin-right: 10px;
+}
+
+.contact-list li span{
+    color: var(--third-color);
+    margin-left: 40px;
+}
+
+.contact-list li span a{
+    color: var(--third-color);
+}
+
+.contact-right p{
+    color: var(--third-color);
+    font-size: 1.6em;
+    margin-bottom: 30px;
+}
+
+.contact-right p span{
+    color: var(--first-color);
+    font-weight: 700;
+}
+
+.contact-form input, .contact-form textarea{
+    border: none;
+    color: var(--first-color);
+    background: var(--bg-transparent-color-02);
+    font-size: var(--normal-font-size);
+    margin-bottom: 20px;
+    padding: 15px 40px 40px 20px;
+    border-radius: 5px;
+}
+
+.contact-form textarea{
+    width: 100%;
+    resize: none;
+}
+
+::placeholder{
+    color: var(--first-color);
+}
+
+.contact-form .first-row input{
+    width: 100%;
+}
+
+.contact-form .second-row{
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact-form .second-row input{
+    width: 48%;
+}
+
+.contact-form .btn{
+    border:none;
+    margin-top: 0;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/*=============Footer==========*/
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: var(--second-color);
+    width: 100%;
+    margin-top: 50px;
+    padding: 3rem 2rem;
+    color: #fff;
+}
+
+footer a{
+    columns: #fff;
+}
+
+.footer-container{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1150px;
+}
+
+.footer-container .about h2{
+    font-size: 3em;
+    font-weight: 600;
+    background: linear-gradient(to top, transparent 0%, #fff 50%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    opacity: .8;
+}
+
+.footer-container .about p{
+    font-size: var(--normal-font-size);
+    font-weight: 300;
+    margin-bottom: 30px;
+}
+
+.footer-container .about a{
+    color: #fff;
+}
+
+
+.footer-container .info,
+.footer-container .follow{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footer-container .info h3,
+.footer-container .follow h3{
+    font-size: 1.1em;
+    font-size: 500;
+    margin-bottom: 30px;
+}
+
+.footer-container .info ul,
+.footer-container .follow ul{
+    display: flex;
+}
+
+.footer-container .info a{
+    margin: 20px;
+    color: #fff;
+}
+
+.footer-container .follow a{
+    font-size: 1.5em;
+    margin: 20px;
+    color: #fff;
+}
+
+.footer-copyright p{
+    font-size: var(--normal-font-size);
+    font-weight: 300;
+    margin-top: 50px;
+}
+
+/*==========Media query max-width 1070px============*/
+@media screen and (max-width: 1070px) {
+    /*=========Header navigation menu===========*/
+    .navigation{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: var(--bg-transparent-color-01);
+        visibility: hidden;
+        opacity: 0;
+        transition: .3s ease;
+    }
+
+    .navigation.active{
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .nav-items{
+        position: relative;
+        background: var(--modal-bg-color);
+        width: 600px;
+        max-width: 600px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin: 20px;
+        padding: 40px;
+        border-radius: 10px;
+        box-shadow: var(--box-shadow);
+    }
+
+    .nav-items a{
+        margin: 15px 50px;
+    }
+
+    .nav-close-btn{
+        position: absolute;
+        background: url(../img/close.png)no-repeat;
+        filter: var(--color-filter);
+        background-size: 12px;
+        background-position: center;
+        width: 40px;
+        height: 40px;
+        top: 0;
+        right: 0;
+        margin: 10px;
+        cursor: pointer;
+    }
+
+    .nav-menu-btn{
+        background: url(../img/menu.png)no-repeat;
+        filter: var(--color-filter);
+        background-position: center;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        display: block;
+    }
 }
